@@ -35,22 +35,31 @@
 
         #loadingBar {
             display: flex;
+            align-items: center;
             justify-content: space-evenly;
             width: 50vw;
+            min-height: 40px;
         }
 
         .loadingSquare {
-            width: 20px;
-            height: 20px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 40px;
+            height: 40px;
             background-color: black;
-            animation: loading 1.25s ease-in-out;
+            animation: loading 6.0s ease-in-out;
             animation-iteration-count: infinite;
+            border-radius: 20px;
+            color: black;
+            text-align: center;
+            font-size: 33px;
         }
 
         .loadingSquare:nth-child(2) {
             animation-delay: 0.25s;
         }
-
+        
         .loadingSquare:nth-child(3) {
             animation-delay: 0.5s;
         }
@@ -63,18 +72,38 @@
             animation-delay: 1s;
         }
 
+        .loadingSquare:nth-child(6) {
+            animation-delay: 1.25s;
+        }
+
+        .loadingSquare:nth-child(7) {
+            animation-delay: 1.5s;
+        }
+
+        .loadingSquare:nth-child(8) {
+            animation-delay: 1.75s;
+        }
+
         @keyframes loading {
-            0% {
-                background-color: red;
-            }
             20% {
                 background-color: black;
+                color: black;
+                font-size: 15px;
+            }
+            40% {
+                background-color: rgb(100, 100, 100);
+                color: gray;
+                font-size: 33px;
+            }
+            60% {
+                background-color: rgb(100, 100, 100);
+                color: gray;
+                font-size: 33px;
             }
             80% {
                 background-color: black;
-            }
-            100% {
-                background-color: red;
+                color: black;
+                font-size: 15px;
             }
         }
     </style>
@@ -84,11 +113,14 @@
     <div id="loadingScreen">
         <h1>Inhalte werden geladen</h1>
         <div id="loadingBar">
-            <div class="loadingSquare"></div>
-            <div class="loadingSquare"></div>
-            <div class="loadingSquare"></div>
-            <div class="loadingSquare"></div>
-            <div class="loadingSquare"></div>
+            <div class="loadingSquare">S</div>
+            <div class="loadingSquare">T</div>
+            <div class="loadingSquare">E</div>
+            <div class="loadingSquare">F</div>
+            <div class="loadingSquare">F</div>
+            <div class="loadingSquare">L</div>
+            <div class="loadingSquare">I</div>
+            <div class="loadingSquare">X</div>
         </div>
     </div>
     <link rel="stylesheet" href="sflix_sys/sflix.css" type="text/css">
@@ -120,9 +152,9 @@
             <h3>Neue Medieninhalte hinzufügen</h3>
             <p>Um neue Medieninhalte hinzuzufügen, müssen diese einfach in den entsprechenden STEFFLIX-Ordner kopiert werden und anschliessend das Programm "updateData.exe" ausgeführt werden.</p>
             <ol>
-                <li>Gewünschte Medien in passenden Unterordner von STEFFLIX kopieren
-                <h4 style="text-align: left;">Unterstützte Dateiformate:</h4>
-                <ul style="text-align: left; margin-left: 30px; margin-bottom: 20px;">
+                <li>Gewünschte <a style="cursor: pointer;" onclick="showAddNewMediaInfo()">Medien</a> in passenden Unterordner von STEFFLIX kopieren<br><br>
+                <h4 id="addNewMediaInfoTitle" style="text-align: left;display: none;">Unterstützte Dateiformate:</h4>
+                <ul id="addNewMediaInfo" style="display: none; text-align: left; margin-left: 30px; margin-bottom: 20px;">
                     <li>Video: mp4</li>
                     <li>Musik: mp3, ogg, m4a</li>
                     <li>Bilder: jpg, png, gif</li>
